# glabels-qt

.github/workflows/: build-tests.yml
glabels/: CMakeLists.txt
model/: FileUtil.cpp
model/unit_tests/: TestXmlLabel.cpp
